<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/my_name"
        app:layout_constraintBottom_toTopOf="@+id/tvMyRa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMyRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/my_ra"
        app:layout_constraintBottom_toTopOf="@+id/tvProfTitu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyName" />

    <TextView
        android:id="@+id/tvProfTitu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/professor_titular"
        app:layout_constraintBottom_toTopOf="@+id/etSalIni"
        app:layout_constraintStart_toStartOf="@+id/tvMyRa"
        app:layout_constraintTop_toBottomOf="@+id/tvMyRa" />

    <EditText
        android:id="@+id/etSalIni"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="79dp"
        android:ems="10"
        android:hint="@string/salario_inicial"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/tvProfHor"
        app:layout_constraintEnd_toStartOf="@+id/etAnos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfTitu" />

    <EditText
        android:id="@+id/etAnos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/anos"
        android:inputType="number|numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/etSalIni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSalIni" />

    <TextView
        android:id="@+id/tvProfHor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/professor_horista"
        app:layout_constraintBottom_toTopOf="@+id/etTotalHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSalIni" />

    <EditText
        android:id="@+id/etTotalHoras"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/total_horas"
        android:inputType="number|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/rgProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etValorHora"
        app:layout_constraintTop_toBottomOf="@+id/tvProfHor" />

    <EditText
        android:id="@+id/etValorHora"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="39dp"
        android:ems="10"
        android:hint="@string/hora_aula"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/etTotalHoras"
        app:layout_constraintEnd_toStartOf="@+id/etTotalHoras"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTotalHoras">

        <RadioButton
            android:id="@+id/rbProfTitu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor_titular" />

        <RadioButton
            android:id="@+id/rbProfHor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor_horista" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgProf" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc" />

</androidx.constraintlayout.widget.ConstraintLayout>